@@ -1,19 +1,29 @@
 
-scriptGrob <- function(script=NULL, filename=NULL, type="text/ecmascript") {
-  if(!is.null(filename)) {
-    body <- paste(readLines(filename), collapse="\n")
-  } else if (!is.null(script)) {
-    body <- script;
-  }
-  sg <- grob(type = type, body = body, cl="script")
-  sg
+scriptGrob <- function(script=NULL, filename=NULL, type="text/ecmascript",
+                       inline=FALSE, name=NULL) {
+    body <- ""
+    href <- ""
+    if (!is.null(filename)) {
+        if (inline) {
+            body <- paste(readLines(filename), collapse="\n")
+        } else {
+            href <- filename
+        }
+    } else if (!is.null(script)) {
+        body <- script
+    } else {
+        stop("No script specified")
+    }
+    sg <- grob(type = type, href = href, body = body,
+               name = name, cl="script.grob")
+    sg
 }
 
 grid.script <- function(...) {
-  grid.draw(scriptGrob(...))
+    grid.draw(scriptGrob(...))
 }
 
-grobToDev.script <- function(x, dev) {
-  svgScript(x$body, x$type, svgdev=dev@dev)
+grobToDev.script.grob <- function(x, dev) {
+    svgScript(x$body, x$href, x$type, x$name, svgdev=dev@dev)
 }
 
