@@ -17,6 +17,10 @@ Changes from 0.7-0 to 0.7-1
 5.  Added "animation" vignette, which describes how to specify
     animation values for grid.animate().
 
+6.  Named top-level gTree "gridSVG" (and therefore <g id="gridSVG">).
+
+7.  Added 'inline' argument to grid.script().
+
 
 Changes from 0.6-0 to 0.7-0
 ===========================
